--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
