--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
