--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.7.1",
+    "axios": "^1.6.3",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
