--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
