feat: save and get tech 2024-01-23

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.3",
+    "cloudinary": "^1.41.2",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
