feat: all get ready only need the auth 2024-02-19

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "cSpell.words": [
     "Navs"
   ],
-  "CodeGPT.apiKey": "CodeGPT Plus Beta"
+  "CodeGPT.apiKey": "CodeGPT Plus Beta",
+  "liveServer.settings.port": 5502
 }
