--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
